# buildtest

.github/workflows/: cmake-single-platform.yml
somefolder/: CMakeLists.txt  project0.c  project1.c  project2.c
